--- a/trello.html
+++ b/trello.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <script type="module" src="./card.js"></script>
+    <script type="module">
+        import List from './List.js';
+        const list = new List();
+    </script>
 </body>
 </html>
