Created initial board and utility file

--- a/trello.html
+++ b/trello.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <script type="module">
-        import List from './List.js';
-        const list = new List();
+        import Board from './board.js';
+        const board = new Board();
     </script>
 </body>
 </html>
