--- a/trello.html
+++ b/trello.html
@@ -8,11 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
     <script type="module">
-      import Board from "./board.js";
+      import Board from "./src/board.js";
       let data = {
         title: "Release 0.0.1",
         lists: [
