--- a/trello.html
+++ b/trello.html
@@ -13,6 +13,7 @@
   <body>
     <script type="module">
       import Board from "./src/board.js";
+      // data for the borad to be craeted
       let data = {
         title: "Release 0.0.1",
         lists: [
